--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.github.rascmatt.z3' version '1.0.2'
 }
 
 group = 'org.pmsoft'
@@ -7,17 +8,28 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+
+    maven {
+        url = uri("https://artifacts.itemis.cloud/repository/maven-mps")
+    }
 }
 
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.18.0'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'org.apache.commons:commons-text:1.11.0'
-    implementation("org.locationtech.jts:jts-core:1.20.0")
+    implementation "org.locationtech.jts:jts-core:1.20.0"
+    implementation "io.github.rascmatt:z3-bootstrap:1.0.0"
+
+    implementation "com.microsoft.z3:java-jar:4.11.2"
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+z3 {
+    version = "4.15.3"
 }
 
 test {
